--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.10",
     "gatsby-source-filesystem": "^2.1.22",
+    "gatsby-source-medium": "^2.1.9",
+    "gatsby-source-rss": "^1.0.0",
     "gatsby-transformer-remark": "^2.6.22",
     "gatsby-transformer-sharp": "^2.2.6",
     "prop-types": "^15.7.2",
